Update the tests and support the most of SQL server.

--- a/src/Relational/EFCore.Bulk.Relational-3.1.csproj
+++ b/src/Relational/EFCore.Bulk.Relational-3.1.csproj
@@ -10,6 +10,8 @@
 
   <ItemGroup>
     <Compile Remove="Provider\**" />
+    <Compile Remove="**\*.60.cs" />
+    <Compile Remove="**\*.50.cs" />
   </ItemGroup>
 
   <ItemGroup>
