--- a/src/Relational/EFCore.Bulk.Relational-6.0.csproj
+++ b/src/Relational/EFCore.Bulk.Relational-6.0.csproj
@@ -10,6 +10,8 @@
 
   <ItemGroup>
     <Compile Remove="Provider\**" />
+    <Compile Remove="**\*.50.cs" />
+    <Compile Remove="**\*.31.cs" />
   </ItemGroup>
 
   <ItemGroup>
