--- a/test/Relational/EFCore.Bulk.Relational.Tests-6.0.csproj
+++ b/test/Relational/EFCore.Bulk.Relational.Tests-6.0.csproj
@@ -14,6 +14,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="Functional.SelfJoinsRemoval.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <AssemblyAttribute Include="Xunit.TestCaseOrdererAttribute">
       <_Parameter1>Microsoft.EntityFrameworkCore.TestUtilities.Xunit.TestPriorityOrderer</_Parameter1>
       <_Parameter2>Microsoft.EntityFrameworkCore.TestUtilities</_Parameter2>
