--- a/src/PostgreSql/EFCore.Bulk.PostgreSql-3.1.csproj
+++ b/src/PostgreSql/EFCore.Bulk.PostgreSql-3.1.csproj
@@ -10,6 +10,8 @@
 
   <ItemGroup>
     <Compile Include="..\Relational\Provider\**" />
+    <Compile Remove="..\Relational\Provider\ParameterBasedSqlProcessor.cs" />
+	<Compile Remove="QueryCompilationContextFactory.cs" />
   </ItemGroup>
 
   <ItemGroup>
