--- a/src/SqlServer/EFCore.Bulk.SqlServer-5.0.csproj
+++ b/src/SqlServer/EFCore.Bulk.SqlServer-5.0.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <Compile Include="..\Relational\Provider\**" />
+	<Compile Remove="QueryableMethodTranslatingExpressionVisitor.cs" />
   </ItemGroup>
 
   <ItemGroup>
